--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "serve": "live-server public",
     "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JulianNicholls/..."
+    "url": "git+https://github.com/JulianNicholls/React-2-Expensify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://github.com/JulianNicholls/...",
+  "homepage": "https://github.com/JulianNicholls/React-2-Expensify",
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -50,6 +51,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
+    "jest": "^23.4.2",
     "live-server": "^1.2.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
