--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
@@ -53,6 +56,8 @@
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.4.2",
     "live-server": "^1.2.0",
+    "raf": "^3.4.0",
+    "react-test-renderer": "^16.4.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   }
