--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public",
-    "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack -p --mode production",
+    "dev-server": "webpack-dev-server --mode development",
     "test": "jest"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "normalize.css": "^8.0.0",
