--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Code from the Complete React course by Andrew Mead",
   "main": "index.js",
+  "engines": {
+    "node": "8.11.x",
+    "npm": "6.2.x"
+  },
   "scripts": {
     "build:dev": "webpack --mode development",
     "build:prod": "webpack -p --mode production",
