--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest": "^23.4.2",
     "live-server": "^1.2.0",
     "raf": "^3.4.0",
+    "redux-mock-store": "^1.5.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   }
