--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:prod": "webpack -p --mode production",
     "start:dev": "nodemon server/server.js",
     "dev-server": "webpack-dev-server --mode development",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
