--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "firebase": "^5.3.0",
+    "history": "^4.7.2",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "normalize.css": "^8.0.0",
@@ -68,7 +69,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.4.2",
-    "live-server": "^1.2.0",
     "raf": "^3.4.0",
     "redux-mock-store": "^1.5.3",
     "webpack-cli": "^3.1.0",
